crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.SeriesLines.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
colors: [3161148927]
widths: [1.0]
names: [<name>]
visible_series: [true]
aggregation_policy: [6]
interpolation_mode: [1]
