crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.SeriesPoints.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
colors: [3161148927]
markers: [1]
names: [<name>]
visible_series: [true]
marker_sizes: [3.0]
