crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.Tensor.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
data: [{shape: [], names: null, buffer: {U8=[]}}]
value_range: [[0.0, 1.0]]
